updated version
This is my current progress i think. lets see how it goes
