# Simula/simul/simulphase2backend/routes/getProjects.js
@@ -18,19 +18,19 @@ router.get("/projects", function (req, res, next) {
   if(decoded.userType == "director") {
     req.db
     .from("project")
-    .join("users", "project.userID", "=", "users.userID")
-    .join("directorUsers", "project.userID", "=", "directorUsers.userID")
+    .join("directors", "project.userID", "=", "directors.directorID")
     .select(
       req.db.raw(
         `DATE_FORMAT(projectDateCreated,'%d/%m/%Y %h:%i:%s %p') AS projectDateCreated`
       ),
-      'users.userName AS createdBy',
+      'directors.directorName AS createdBy',
       "projectAddress",
+      "companyName",
       "projectStatus",
-      "project.projectID",
+ 
     )
-    .where("directorUsers.directorID", decoded.token)
-    .orderBy('project.projectID', 'desc')
+    .where("directors.directorID", decoded.token)
+    .orderBy('project.projectID', 'asc')
     .then((rows) => {
       var completedProjects = []
       var cancelledProjects = []
